# LicensePro

./: .gitignore  README.md
CreateLisence/src/: CMakeLists.txt  DataHandler.cpp  DataHandler.h  date.cpp  date.h  main.cpp  version.h
CreateLisence/src/bat/: read.bat
CreateLisencelib/LisenceLib/src/: CMakeLists.txt  NtpService.cpp  NtpService.h  license.cpp  stdafx.h
CreateLisencelib/SodiumLicense/Debug/: LIBLicense.lib
CreateLisencelib/SodiumLicense/LIBLicense-linux/: NtpService.cpp  SdmLicense.cpp  SdmLicense.h  license.cpp  license.h  makefile
CreateLisencelib/SodiumLicense/LibLicenseTest/: LibLicenseTest.cpp  ReadMe.txt  libsodium.lib  license.dat20160917  license.dat20171017  stdafx.cpp  stdafx.h
CreateLisencelib/SodiumLicense/License/: LicDefine.h  NtpService.cpp  SdmLicense.cpp  license.cpp
CreateLisencelib/SodiumLicense/LicenseDLL/: ReadMe.txt  stdafx.cpp  targetver.h
CreateLisencelib/SodiumLicense/LicenseDLL/Debug/: LIBLicense.idb
CreateLisencelib/SodiumLicense/SodiumLicense/: ReadMe.txt  SodiumLicense.cpp  stdafx.cpp  stdafx.h
lib/win/Debug/: LIBLicense.lib  libsodium.lib
lib/win/Release/: LIBLicense.lib  libsodium.lib
lib/win2015/Debug/: LIBLicense.lib  libsodium.lib
lib/win2015/Release/: LIBLicense.lib  LIBLicense1.lib  libsodium.lib
